# AnkiChat

./: .gitignore  .gitmodules  .mcp.json  AnkiAPI  CLI_IMPLEMENTATION_PLAN.md  CLI_IMPLEMENTATION_SUMMARY.md  README.md  anki_mcp_server.py  claude_desktop_config.json  claude_sdk_integration.py  example.env  gemini_client.py  install.sh  install_linux.sh  language_config.json.example  last_commit.txt  mcp_config.json  mcp_config_global.json  openai_client.py  pyproject.toml  run_mcp_server.sh  test_deck_ops.py  test_mcp_server.sh
anki_chat/: __init__.py  cli.py
cli/: README.md  __init__.py  client.py  display.py  main.py  polling_manager.py  server.py  session.py
configs/: example_mcp_config.json
docs/: TIMEOUT_RECOVERY_DESIGN.md  WEB_APP_LAYER_REFACTOR.md
docs/user-stories/: contextual-vocab-definitions.md
scripts/: dev-reinstall.sh  install_linux.sh  install_mac.sh  install_windows.ps1  reinstall-cli-tool.sh  reinstall-web-tool.sh  run-tui.sh
src/clients/: gemini_client.py  openai_client.py
src/servers/: anki_mcp_server.py  basic_card_server.py
tests/: __init__.py
tests/claude_sdk_integration/: README.md  __init__.py  test_card_creation.py  test_claude_sdk.py  test_claude_sdk_core.py  test_enhanced_integration.py  test_subagent_functionality.py
web_app/: README.md  __init__.py  claude_sdk_integration.py  enhanced_main.py  enhanced_main.py.queue_backup  main.py
