[project]
name = "anki-chat"
version = "0.2.0"
description = "AnkiChat MCP Server for Anki operations"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "debugpy",
    "flask==2.2.2",
    "psycopg2-binary",
    "python-dotenv==1.0.0",
    "openai",
    "jsonschema==4.22.0",
    "requests",
    "PyYAML",
    "anthropic",
    "nltk",
    "pydantic",
    "ollama",
    "wikipedia",
    "fal-client",
    "mistralai",
    "ipython",
    "google-genai",
    "fuzzywuzzy",
    "python-Levenshtein",
    "networkx",
    "graphviz",
    "groq",
    "together",
    "datasets",
    "fire",
    "loguru",
    "typer",
    "rich",
    "flask-cors",
    "flask",
    "uvicorn",
    "fastapi",
    "pandas",
    "epitran",
    "python-multipart",
    "google-generativeai",
    "ipdb",
    "docker",
    "httpx",
    "psutil",
    "requests",
    "sqlalchemy",
    "asyncpg",
    "mcp",
    "mcp-grep",
    "claude-code-sdk",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
anki-chat-mcp = "anki_chat.cli:main"
anki-chat-web = "web_app.enhanced_main:main"
ankichat-cli = "cli.main:cli"

[tool.setuptools]
packages = ["anki_chat", "src", "src.servers", "src.clients", "AnkiApi", "AnkiClient", "AnkiClient.src", "AnkiClient.src.operations", "web_app", "cli"]
py-modules = ["claude_sdk_integration"]
include-package-data = true

[tool.setuptools.package-data]
anki_chat = ["*"]
src = ["**/*"]
AnkiClient = ["**/*"]
web_app = ["**/*"]

